Loot/armor balance + fixes

--- a/src/main/resources/assets/skns_progression/lang/en_us.json
+++ b/src/main/resources/assets/skns_progression/lang/en_us.json
@@ -1,5 +1,19 @@
 {
   "item.skns_progression.copper_nugget" : "Copper Nugget",
+  "item.skns_progression.copper_sword": "Copper Sword",
+  "item.skns_progression.copper_axe": "Copper Axe",
+  "item.skns_progression.copper_pickaxe": "Copper Pickaxe",
+  "item.skns_progression.copper_shovel": "Copper Shovel",
+  "item.skns_progression.copper_hoe": "Copper Hoe",
+  "item.skns_progression.copper_helmet": "Copper Helmet",
+  "item.skns_progression.copper_chestplate": "Copper Chestplate",
+  "item.skns_progression.copper_leggings": "Copper Leggings",
+  "item.skns_progression.copper_boots": "Copper Boots",
+  "item.skns_progression.obsidian_sword": "Obsidian Sword",
+  "item.skns_progression.obsidian_axe": "Obsidian Axe",
+  "item.skns_progression.obsidian_pickaxe": "Obsidian Pickaxe",
+  "item.skns_progression.obsidian_shovel": "Obsidian Shovel",
+  "item.skns_progression.obsidian_hoe": "Obsidian Hoe",
 
   "item.skns_progression.iron_upgrade_smithing_template": "Smithing Template",
   "tooltip.skns_progression.smithing_template.iron_upgrade.applies_to": "§9Copper Equipment",
@@ -8,25 +22,23 @@
   "tooltip.skns_progression.smithing_template.iron_upgrade.additions_slot_description" : "§cAdd Iron Ingot",
   "upgrade.skns_progression.smithing_template_iron_upgrade" : "§7Iron Upgrade",
 
-  "item.skns_progression.copper_sword": "Copper Sword",
-  "item.skns_progression.copper_axe": "Copper Axe",
-  "item.skns_progression.copper_pickaxe": "Copper Pickaxe",
-  "item.skns_progression.copper_shovel": "Copper Shovel",
-  "item.skns_progression.copper_hoe": "Copper Hoe",
-
-  "item.skns_progression.copper_helmet": "Copper Helmet",
-  "item.skns_progression.copper_chestplate": "Copper Chestplate",
-  "item.skns_progression.copper_leggings": "Copper Leggings",
-  "item.skns_progression.copper_boots": "Copper Boots",
-
-  "item.skns_progression.obsidian_sword": "Obsidian Sword",
-  "item.skns_progression.obsidian_axe": "Obsidian Axe",
-  "item.skns_progression.obsidian_pickaxe": "Obsidian Pickaxe",
-  "item.skns_progression.obsidian_shovel": "Obsidian Shovel",
-  "item.skns_progression.obsidian_hoe": "Obsidian Hoe",
-
   "itemgroup.skns_progression.involved_items" : "SKN's Progression Key Items",
 
+  "tooltip.skns_progression.item.nerfed" : "NERFED",
+  "tooltip.skns_progression.item.nerfed.description" : "this item is ineffective",
+  "tooltip.skns_progression.item.diamond.line1" : "tip your other tools at an anvil",
+  "tooltip.skns_progression.item.diamond.line2" : "to mine diamond-tier blocks",
+  "tooltip.skns_progression.item.wood_tier" : "can mine stone blocks",
+  "tooltip.skns_progression.item.stone_tier" : "can mine copper ores",
+  "tooltip.skns_progression.item.lower_metal_tier" : "can mine deepslate, iron, and gold ores",
+  "tooltip.skns_progression.item.upper_metal_tier" : "can mine diamond and other gem ores",
+
+  "tooltip.skns_progression.item.enhancement_material.misc" : "this item can enhance another item using an anvil",
+  "tooltip.skns_progression.item.enhancement_material.weapons" : "this item can enhance your weapons using an anvil",
+  "tooltip.skns_progression.item.enhancement_material.tools" : "this item can enhance your tools using an anvil",
+  "tooltip.skns_progression.item.enhancement_material.pickaxes" : "this item can enhance your pickaxes using an anvil",
+  "tooltip.skns_progression.item.enhancement_material.armor" : "this item can enhance your armor using an anvil",
+  "tooltip.skns_progression.item.enhancement_material.wip" : "^ WIP: Does not function!",
   "tooltip.skns_progression.components.tipped" : "Tipped",
   "tooltip.skns_progression.components.sharpened" : "Sharpened",
   "tooltip.skns_progression.components.soulbound" : "Soulbound",
